fixed description on mobile

--- a/styles.css
+++ b/styles.css
@@ -386,7 +386,7 @@ footer a:hover {
   }
 
   .description {
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     /* Ancora più piccolo su mobile */
   }
 
